SFCompLibrary/src/objects/AvaCompany__c.object
<CustomObject>
    <description>Custom Object to Store Avalara Company Record, which includes the Origin Address for tax calculations</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Company Address</description>
        <inlineHelpText>Street Address for the Company</inlineHelpText>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>Company City</inlineHelpText>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Code__c</fullName>
        <description>Avalara Company Code</description>
        <inlineHelpText>Avalara Company Code specifying which company to post tax transactions to in the Avalara admin console</inlineHelpText>
        <label>Company Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>2 char ISO country code</description>
        <inlineHelpText>2 char ISO country code</inlineHelpText>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Zip or Postal Code</description>
        <inlineHelpText>Zip or Postal Code</inlineHelpText>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>State or Province</description>
        <inlineHelpText>State or Province Abbreviation.</inlineHelpText>
        <label>Region</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>AvaCompany</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>AvaCompany Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AvaCompanies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>